# newspy

./: .gitignore  .pnp.cjs  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  commitlint.config.cjs  package.json  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-hooks.sh  utils.py
.githooks/: commit-msg
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  main.yml  pre-release.yml  prerelease.yml  publish.yml  release.yml
data/: rss_sources.csv
examples/: basic_usage.ipynb  get_top_headlines.ipynb  spacy_nlp.ipynb
examples/scratchpad/: articles_nlp.csv  articles_nlp_2023-09-03_22-07-19.csv
newspy/: __init__.py  archiver.py  client.py  exceptions.py  http_client.py  models.py  newsapi_client.py  utils.py
newspy/newsapi/: client.py  models.py
newspy/newsorg/: __init__.py  client.py  models.py
newspy/rss/: __init__.py  client.py  models.py
newspy/shared/: exceptions.py  http_client.py  models.py  utils.py  xml_parser.py
tests/: conftest.py  test_archiver.py  test_client.py  test_http_client.py  test_models.py  test_newsapi_client.py  test_utils.py
tests/data/: rss_sources.csv
tests/newsapi/: test_client.py
tests/newsorg/: test_client.py
tests/rss/: test_client.py
tests/shared/: test_http_client.py  test_models.py  test_utils.py  test_xml_parser.py
