[tool.poetry]
name = "newspy"
version = "2.2.5"
description = "The news client written in Python that fetches and curates the world news across the web."
authors = ["Sechaba Mofokeng <sechaba@onemoola.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/onemoola/newspy"
repository = "https://github.com/onemoola/newspy"
documentation = "https://github.com/onemoola/newspy#readme"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/onemoola/newspy/issues"


[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = ">=23.9,<25.0" }
pre-commit = "4.0.1"
pytest = "8.3.3"
pytest-cov = "6.0.0"
responses = "0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
